# redis-playground

./: .env.example  .gitignore  Makefile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
exercises/01-basic-commands/: concept.md  concept_cn.md
exercises/02-strings/: concept.md  concept_cn.md
exercises/03-hashes/: concept.md  concept_cn.md
exercises/04-lists/: concept.md  concept_cn.md
exercises/05-sets/: concept.md  concept_cn.md
exercises/06-sorted-sets/: concept.md  concept_cn.md
exercises/07-pub-sub/: concept.md  concept_cn.md
exercises/08-streams/: concept.md  concept_cn.md
exercises/09-transactions/: concept.md  concept_cn.md
exercises/10-pipelining/: concept.md  concept_cn.md
exercises/11-lua-scripting/: concept.md  concept_cn.md
exercises/12-geospatial/: concept.md  concept_cn.md
exercises/13-bitmaps-hyperloglog/: concept.md  concept_cn.md
exercises/14-keyspace-notifications/: concept.md  concept_cn.md
exercises/15-persistence/: concept.md  concept_cn.md
exercises/16-client-side-caching/: concept.md  concept_cn.md
exercises/17-rate-limiting/: concept.md  concept_cn.md
exercises/18-distributed-locks/: concept.md  concept_cn.md
exercises/19-sentinel/: concept.md  concept_cn.md
exercises/20-cluster/: concept.md  concept_cn.md
exercises/21-sharded-pub-sub/: concept.md  concept_cn.md
exercises/22-scan/: concept.md  concept_cn.md
exercises/23-redisjson/: concept.md  concept_cn.md
exercises/24-redisearch/: concept.md  concept_cn.md
tests/: conftest.py
(+64 files in other folders)
